--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 <!-- Accueil -->
 <div class="screen active" id="home">
-  <img src="tilesia_accueil_alex.png" alt="Accueil Alex">
+  <img src="images/tilesia_accueil_alex.png" alt="Accueil Alex">
   <button class="btn" onclick="goTo('map')">Commencer la mission</button>
 </div>
 
@@ -180,19 +180,19 @@
   const modalData = {
     'Direction': {
       text: "Le président vous accueille : ‘La santé et la sécurité sont mes priorités pour garantir le bon fonctionnement de l’entreprise et le bien-être des salariés.’",
-      image: "tilesia_direction.png"
+      image: "images/tilesia_direction.png"
     },
     'Technique': {
-      text: "Vos collègues vous expliquent que le futur titulaire devra intervenir pendant les heures ouvrables, sauf cas exceptionnel.\nPour les locaux électriques, il sera accompagné d’un agent habilité.\nBureaux, couloirs, escaliers, ascenseur, sanitaires, vestiaires, réfectoires : tous ces espaces sont concernés.\nLe titulaire remplira un avis de passage et un rapport semestriel sera rédigé par le service technique.\nConsommables à fournir : papier toilette, essuie-mains, savon liquide, sacs poubelles, désodorisants.",
-      image: "tilesia_technique.png"
+      text: `Intervention pendant les heures ouvrables, sauf cas exceptionnel. Pour les locaux électriques, le titulaire sera accompagné d'un employé disposant des habilitations requises.\nLes espaces concernés sont les suivants : bureaux, couloirs, escaliers, ascenseur, sanitaires, vestiaires, réfectoires.\nLe titulaire remplira un avis de passage. Le rapport semestriel sera rédigé par le service technique.\n\nLes consommables à la charge du prestataire sont les suivants :\n- Le papier toilette\n- Le papier essuie-mains\n- Le savon liquide à mains\n- Les sacs poubelles\n- Désodorisants.`,
+      image: "images/tilesia_technique.png"
     },
     'Salaries': {
       text: "Il y a 300 salariés dans le bâtiment répartis sur les 4 étages. Le bâtiment dispose d’une superficie de 4100 m². Vous observez une ambiance de coopération et de réunions dans les locaux.",
-      image: "tilesia_salaries.png"
+      image: "images/tilesia_salaries.png"
     },
     'Juridique': {
-      text: "La juriste rappelle les prescriptions du Décret 92-158 du 20 février 1992 reprises dans le Code du travail (R.237-1 à R.237-28), concernant les travaux réalisés dans l’établissement par une entreprise extérieure.",
-      image: "tilesia_juridique.png"
+      text: "Je vous rappelle les règles du Décret 92-158 du 20 février 1992 reprises dans le Code du travail (articles R.237-1 et R.237-28) concernant les prescriptions particulières d’hygiène et de sécurité applicables aux travaux effectués dans un établissement par une entreprise extérieure.",
+      image: "images/tilesia_juridique.png"
     }
   };
 
